[tool.poetry]
name = "psproject"
version = "0.1.0"
description = ""
authors = ["Gabriel <lothricz@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
psutil = "^5.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
